--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel = "stylesheet" type = "text/css" href = "aaronstudiok.css">
+	<link rel = "stylesheet" type = "text/css" href = "index.css">
     <title><strong> Aaron Core Studio Session K </strong></title>
 
 </head>
 <body>
 	<h1> CORE INTERACTION HOME PAGE </h1>
 	<h1> STUDIO SESSION-K </h1>
-	<h5> week01 </h5>
-	<p> class01 </p>
+	<h5> week01 Class01 </h5>
+	
