--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 
 </head>
 <body>
+	<br>
 	<h1> CORE INTERACTION HOME PAGE </h1>
 	<h1> STUDIO SESSION-K </h1>
-	<h5> week01 Class01 </h5>
+	<br>
+	<br>
+	<h3>WEEK01</h3>
+	<h3> <em> <a href="file:///Users/aaron/Desktop/Aaron-D/Session%20K%20-%20Studio/week01-class01/EX01/class01%20copy.html">  Week01 Class01 </a></em></h3>
 	
