--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 	<br>
 	<br>
 	<h3>WEEK01</h3>
-	<h3> <em> <a href="file:///Users/aaron/Desktop/Aaron-D/Session%20K%20-%20Studio/week01-class01/EX01/class01%20copy.html">  Week01 Class01 </a></em></h3>
+	<h3> <em> <a href="class01 copy.html">  Week01 Class01 </a></em></h3>
 	
