--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <body>
 	<br>
 	<h1> CORE INTERACTION HOME PAGE </h1>
-	<h1> STUDIO SESSION-K </h1>
+	<h1> STUDIO SESSION-K </h1>   <h1> AARON </h1>
 	<br>
 	<br>
 	<h3>WEEK01</h3>
-	<h3> <em> <a href="class01 copy.html">  Week01 Class01 </a></em></h3>
+	<h3> <em> <a href="Aaron-D/Session K - Studio/class01 copy.html">  Week01 Class01 </a></em></h3>
+
+	<h3>WEEK02</h3>
 	
