--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<br>
 	<br>
 	<h3>WEEK01</h3>
-	<h3> <em> <a href="Aaron-D/Session K - Studio/class01 copy.html">  Week01 Class01 </a></em></h3>
+	<h3> <em> <a href="Session K - Studio/week01-class01/EX01/class01 copy.html">  Week01 Class01 </a></em></h3>
 
 	<h3>WEEK02</h3>
 	
