--- a/class01 copy.html
+++ b/class01 copy.html
@@ -5,8 +5,8 @@
 
 </head>
 <body>
-	<h1> THINGS  A STORY OF THE SIXTIES </h1>
-    <h4>Translated from the French by David Bellos</h4>
+	<p> THINGS  A STORY OF THE SIXTIES </p>
+    <p>Translated from the French by David Bellos</p>
     <br>
 	<br>
 	<br>
@@ -18,7 +18,7 @@
     <p> new life which still remains closed to the thirsty lips of the people who </p>
     <p> follow in their griping and bestial tasks. -  Malcolm Lowry</p>
 
-    <header> shirley</header>
+    
 
 
 
