--- a/index.html
+++ b/index.html
@@ -15,4 +15,5 @@
 	<h3> <em> <a href="class01 copy.html">  Week01 Class01 </a></em></h3>
 
 	<h3>WEEK02</h3>
+	<h3> <em> <a href="week02class01ex.html"> Week02 Class01 </a></em></h3>
 	
