--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel = "stylesheet" type = "text/css" href = "index.css">
-    <title><strong> Aaron Core Studio Session K </strong></title>
+    <title> Aaron Core Studio Session K</title>
 
 </head>
 <body>
