--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 	<br>
 	<br>
 	<h3>WEEK01</h3>
-	<h3> <em> <a href="class01 copy.html">  Week01 Class01 </a></em></h3>
+	<h3> <em> <a href="class01 copy.html">  Week01 Class01 HW</a></em></h3>
 
 	<h3>WEEK02</h3>
-	<h3> <em> <a href="week02class01ex.html"> Week02 Class01 </a></em></h3>
+	<h3> <em> <a href="week02class01ex.html"> Week02 Class01 Exercise </a></em></h3>
+	<h3> <em> <a href=""> Week02 Class01 HW01 </a></em></h3>
 	
