--- a/week02class01hw01.html
+++ b/week02class01hw01.html
@@ -40,7 +40,7 @@
 
     <br>
 
-    <p> There, the carpet would give way to an almost yellow woodblock floor,</p> 
+    <p> <em>T</em>here, the carpet would give way to an almost yellow woodblock floor,</p> 
     <p> partly covered by three faded rugs. It would be a living room about </p>
 
 
