--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@
 	<h3>WEEK02</h3>
 	<h3> <em> <a href="week02class01ex.html"> Week02 Class01 Exercise </a></em></h3>
 	<h3> <em> <a href=""> Week02 Class01 HW01 </a></em></h3>
+	<h3> <em> <a href="week02class01hw02.html"> Week02 Class01 HW02 </a></em></h3>
 	
