--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 	<br>
 	<h1> CORE INTERACTION HOME PAGE </h1>
-	<h1> STUDIO SESSION-K </h1>   <h1> AARON </h1>
+	<h1> STUDIO SESSION-K </h1>   
+	<p> AARON </p>
 	<br>
 	<br>
 	<h3>WEEK01</h3>
