--- a/week02class01hw01.html
+++ b/week02class01hw01.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title><strong> THINGS  A STORY OF THE SIXTIES </strong></title>
+    <title> THINGS  A STORY OF THE SIXTIES </title>
 
 </head>
 <body>
-	<h1> THINGS  A STORY OF THE SIXTIES </h1>
+    <h1>  <span style="color:powderblue">THINGS A STORY OF THE SIXTIES</span></h1>
     <h4>Translated from the French by David Bellos</h4>
     <br>
 	<br>
@@ -17,8 +17,6 @@
     <p> more perfect. Without parallel the crystalline and fecund fountainsof the </p>
     <p> new life which still remains closed to the thirsty lips of the people who </p>
     <p> follow in their griping and bestial tasks. -  Malcolm Lowry</p>
-
-    
 
 
     <br>
@@ -56,14 +54,16 @@
 
     	<br>
 
-    	  <p>On the other side of a small low table, and beneath a silk prayer-mat nailed to the wall with three large-headed brass studs, matching the leather curtain, there would be another sofa, at right angles to the first, with a light-brown velvet covering; it would lead on to a small and spindly piece of furniture, lacquered in dark red and providing three display shelves for knick-knacks: agates and stone eggs, snuffboxes, candy-boxes, jade ashtrays, a mother-of-pearl oystershell, a silver fob watch, a cut-glass glass, a crystal pyramid, a miniature in an oval frame. </p> 
+    <p>On the other side of a small low table, and beneath a silk prayer-mat nailed to the wall with three large-headed brass studs, matching the leather curtain, there would be another sofa, at right angles to the first, with a light-brown velvet covering; it would lead on to a small and spindly piece of furniture, lacquered in dark red and providing three display shelves for knick-knacks: agates and stone eggs, snuffboxes, candy-boxes, jade ashtrays, a mother-of-pearl oystershell, a silver fob watch, a cut-glass glass, a crystal pyramid, a miniature in an oval frame. </p> 
 
 
-    	   <p>Further on, beyond a padded door, there would be shelving on both sides of the corner, for caskets and for records, beside a closed gramophone of which only four machined-steel knobs would be visible, and above it, a print depicting The Great Parade of the Military Tattoo. </p>
+    <p>Further on, beyond a padded door, there would be shelving on both sides of the corner, for caskets and for records, beside a closed gramophone of which only four machined-steel knobs would be visible, and above it, a print depicting The Great Parade of the Military Tattoo. </p>
 
-    	   	<p>Through the window, draped with white and brown curtains in cloth imitating Jouy wallpaper, you would glimpse a few trees, a tiny park, a bit of street. A roll-top desk littered with papers and pen-holders would go with a small cane-seated chair. </p>
 
-    	   		<p>On a console table would be a telephone, a leather diary, a writing pad. Then, on the other side of another door, beyond a low, square revolving bookcase supporting a large, cylindrical vase decorated in blue and filled with yellow roses, set beneath an oblong mirror in a mahogany frame, there would be a narrow table with its two benches upholstered in tartan, which would bring your eye back to the leather curtain.</p>
+    <p>Through the window, draped with white and brown curtains in cloth imitating Jouy wallpaper, you would glimpse a few trees, a tiny park, a bit of street. A roll-top desk littered with papers and pen-holders would go with a small cane-seated chair. </p>
+
+
+    <p>On a console table would be a telephone, a leather diary, a writing pad. Then, on the other side of another door, beyond a low, square revolving bookcase supporting a large, cylindrical vase decorated in blue and filled with yellow roses, set beneath an oblong mirror in a mahogany frame, there would be a narrow table with its two benches upholstered in tartan, which would bring your eye back to the leather curtain.</p>
 
 
 
@@ -92,21 +92,7 @@
 
     	   <p>There, life would be easy, simple. All the servitudes, all the problems brought by material existence would find a natural solution. A cleaning lady would come every morning. Every fortnight, wine, oil and sugar would be delivered. There would be a huge, bright kitchen with blue tiles decorated with heraldic emblems, three china plates decorated with yellow arabesques in metallic paint, cupboards everywhere, a handsome whitewood table in the middle with stools and bench-seats. It would be pleasant to come and sit there, every morning, after a shower, scarcely dressed. On the table there would be a sizeable stoneware butter dish, jars of marmalade, honey, toast, grapefruit cut in two. It would be early. It would be May, the start of a long summer's day.</p>
 
-    	   <p> They would open the mail, they would open the newspapers.</p>
-    	   <p> They would light their first cigarette. </p>
-    	   <p> They would go out. </p>
-    	   <p> Their work would keep them busy for a few hours only, in the morning. </p>
-    	   <p> They would meet for lunch, a sandwich or a steak, according to their mood; they would have coffee at a street café and then go home, on foot, slowly.</p>
+           <h1> <em> <a href="theywould.html"> THEY WOULD... </a></em></h1>
 
-           <p>Their flat would rarely be tidy, but its very untidiness would be its greatest charm. </p>
-           <p>They would hardly bother themselves with it: they would live in it. </p>
-           <p>The comfort of their surroundings would seem to them to be an established fact, a datum, a state of their nature. </p>
-           <p>Their attention would be elsewhere: on the book they would open, on the text they would draft, on the record they would listen to, on their dialogue engaged afresh each day. </p>
-           <p>They would work for a long while. </p>
-           <p>Then they would dine, or go out for dinner; they would see old friends; they would walk together.</p>
-
-           <p>Sometimes it would seem to them that a whole life could be led harmoniously between these book-lined walls, amongst these objects so perfectly domesticated that they would have ended up believing these bright, soft, simple and beautiful things had only ever been made for their sole use. But they wouldn't feel enslaved by them: on some days, they would go off on a chance adventure. No plan seemed impossible to them. They would not know rancour, or bitterness, or envy. For their means and their desires would always match in all ways. They would call this balance happiness and, with their freedom, with their wisdom and their culture, they would know how to retain and to reveal it in every moment of their living, together.</p>
- 
-
-
+    	
 </body>
