--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<link rel = "stylesheet" type = "text/css" href = "index.css">
     <title> Aaron Core Studio Session K</title>
+    <link 
+      
 
 </head>
 <body>
@@ -13,10 +15,13 @@
 	<br>
 	<br>
 	<h3>WEEK01</h3>
+	<h3> 
 	<h3> <em> <a href="class01 copy.html">  Week01 Class01 HW</a></em></h3>
 
 	<h3>WEEK02</h3>
 	<h3> <em> <a href="week02class01ex.html"> Week02 Class01 Exercise </a></em></h3>
 	<h3> <em> <a href="week02class01hw01.html"> Week02 Class01 HW01 </a></em></h3>
 	<h3> <em> <a href="week02class01hw02.html"> Week02 Class01 HW02 </a></em></h3>
+
+	<div id = "circle02"> </div>
 	
