--- a/index.html
+++ b/index.html
@@ -1,29 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel = "stylesheet" type = "text/css" href = "index.css">
-    <title> Aaron Core Studio Session K</title>
-    <link 
-      
+  <head>
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <title>Aaron Core Studio Session K</title>
+    <link
+  </head>
+  <body>
+    <br />
+    <h1>CORE INTERACTION HOME PAGE</h1>
+    <h1>STUDIO SESSION-K</h1>
+    <p>AARON</p>
+    <br />
+    <br />
+    <h3>WEEK01</h3>
+    <h3>
+      <h3>
+        <em>
+          <a
+            href="SessionKStudio/week01/week01-class01/EX01/week01class01ex01.html"
+          >
+            Week01 Class01 HW</a
+          ></em
+        >
+      </h3>
 
-</head>
-<body>
-	<br>
-	<h1> CORE INTERACTION HOME PAGE </h1>
-	<h1> STUDIO SESSION-K </h1>   
-	<p> AARON </p>
-	<br>
-	<br>
-	<h3>WEEK01</h3>
-	<h3> 
-	<h3> <em> <a href="week01class01ex01.html">  Week01 Class01 HW</a></em></h3>
+      <h3>WEEK02</h3>
+      <h3>
+        <em>
+          <a href="SessionKStudio/week02/week02-class01/week02class01ex.html">
+            Week02 Class01 Exercise
+          </a></em
+        >
+      </h3>
+      <h3>
+        <em>
+          <a href="SessionKStudio/week02/week02-class01/week02class01hw01.html">
+            Week02 Class01 HW01
+          </a></em
+        >
+      </h3>
+      <h3>
+        <em>
+          <a href="SessionKStudio/week02/week02-class01/week02class01hw02.html">
+            Week02 Class01 HW02
+          </a></em
+        >
+      </h3>
 
-	<h3>WEEK02</h3>
-	<h3> <em> <a href="week02class01ex.html"> Week02 Class01 Exercise </a></em></h3>
-	<h3> <em> <a href="week02class01hw01.html"> Week02 Class01 HW01 </a></em></h3>
-	<h3> <em> <a href="week02class01hw02.html"> Week02 Class01 HW02 </a></em></h3>
+      <div id="circle01"></div>
 
-	<div id = "circle01"> </div>
-
-	<div id = "circle02"> </div>
-	
+      <div id="circle02"></div>
+    </h3>
+  </body>
+</html>
