--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
         >
       </h3>
 
+      <h3>
+        <em>
+          <a href="SessionKStudio/week02/week02-class02/week02class02hw.html"
+            >Week02 Class02 HW
+          </a>
+        </em>
+      </h3>
+
       <div id="circle01"></div>
 
       <div id="circle02"></div>
