--- a/SessionKStudio/week03/week03-class01/week03class01hw.html
+++ b/SessionKStudio/week03/week03-class01/week03class01hw.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="week01class01hw.css" />
+    <link rel="stylesheet" type="text/css" href="week03class01hw.css" />
     <title>THINGS A STORY OF THE SIXTIES</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Kanit:900i&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1 id="title">THINGS A STORY OF SIXTIES</h1>
+    <h1 id="title">THINGS</h1>
+    <h1 id="a">A</h1>
+    <h1 id="story">STORY OF SIXTIES</h1>
 
     <h1 id="line">
-      ______________________________________________________________________________________
+      <strong>
+        ______________________________________________________________________________________
+      </strong>
+    </h1>
+
+    <h1 id="line1">
+      <strong>
+        ______________________________________________________________________________________
+      </strong>
     </h1>
 
     <h2 id="trans">Translated from the French by David Bellos</h2>
@@ -97,17 +111,6 @@
 
     <h1 class="circle">
       <em> <a href="theywould.html"> THEY WOULD... </a></em>
-    </h1>
-
-    Sometimes it would seem to them that a whole life could be led harmoniously
-    between these book-lined walls, amongst these objects so perfectly
-    domesticated that they would have ended up believing these bright, soft,
-    simple and beautiful things had only ever been made for their sole use. But
-    they wouldn't feel enslaved by them: on some days, they would go off on a
-    chance adventure. No plan seemed impossible to them. They would not know
-    rancour, or bitterness, or envy. For their means and their desires would
-    always match in all ways. They would call this balance happiness and, with
-    their freedom, with their wisdom and their culture, they would know how to
-    retain and to reveal it in every moment of their living, together.
+    
   </body>
 </html>
