--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
         </em>
       </h3>
 
+      <h3>WEEK03</h3>
+
+      <h3>
+        <em>
+          <a href="SessionKStudio/week03/week03-class01/week03class01hw.html">
+            Week03 Class01 HW
+          </a>
+        </em>
+      </h3>
+
       <div id="circle01"></div>
 
       <div id="circle02"></div>
