--- a/SessionKStudio/week03/week03-class01/theywould.html
+++ b/SessionKStudio/week03/week03-class01/theywould.html
@@ -6,22 +6,21 @@
   </head>
   <body>
     <h3 class="they">
-      They would open the mail, they would open the newspapers. /They would
-      light their first cigarette. /They would go out. /Their work would keep
-      them busy for a few hours only, in the morning. Their flat would rarely be
-      tidy, but its very untidiness would be its greatest charm. /Their
-      attention would be elsewhere: on the book they would open, on the text
-      they would draft, on the record they would listen to, on their dialogue
-      engaged afresh each day. /Sometimes it would seem to them that a whole
-      life could be led harmoniously between these book-lined walls, amongst
-      these objects so perfectly domesticated that they would have ended up
-      believing these bright, soft, simple and beautiful things had only ever
+      /They would light their first cigarette. /They would go out. /Their work
+      would keep them busy for a few hours only, in the morning. Their flat
+      would rarely be tidy, but its very untidiness would be its greatest charm.
+      /Their attention would be elsewhere: on the book they would open, on the
+      text they would draft, on the record they would listen to, on their
+      dialogue engaged afresh each day. /Sometimes it would seem to them that a
+      whole life could be led harmoniously between these book-lined walls,
+      amongst these objects so perfectly domesticated that they would have ended
+      up believing these bright, soft, simple and beautiful things had only ever
       been made for their sole use. But they wouldn't feel enslaved by them: on
       some days, they would go off on a chance adventure. No plan seemed
-      impossible to them. They would not know rancour, or bitterness, or envy.
-      For their means and their desires would always match in all ways. They
-      would call this balance happiness and, with their freedom, with their
-      wisdom
+      impossible to them. They woThey would open the mail, they would open the
+      newspapers. uld not know rancour, or bitterness, or envy. For their means
+      and their desires would always match in all ways. They would call this
+      balance happiness and, with their freedom, with their wisdom
     </h3>
     <h2 id="t"><em>T</em></h2>
     <h2 id="h"><em>H</em></h2>
