--- a/index.html
+++ b/index.html
@@ -65,6 +65,22 @@
         </em>
       </h3>
 
+      <h3>
+        <em>
+          <a href="SessionKStudio/week03/week03-class02/week03class02hw02.html">
+            Week03 Class02 LIGHT
+          </a>
+        </em>
+      </h3>
+
+      <h3>
+        <em>
+          <a href="SessionKStudio/week03/week03-class02/week03class02hw01.html">
+            Week03 Class02 OBSCURE
+          </a>
+        </em>
+      </h3>
+
       <div id="circle01"></div>
 
       <div id="circle02"></div>
