--- a/SessionKStudio/week03/week03-class02/week03class02hw01.html
+++ b/SessionKStudio/week03/week03-class02/week03class02hw01.html
@@ -5,6 +5,10 @@
     <title>Obscure</title>
   </head>
   <body>
+    <a href="week03class02hw01.html">HOME</a>
+    <a href="week03class02hw03.html">MAIN</a>
+    <a href="week03class02hw02.html">LIGHT</a>
+
     <img id="png" src="title.png" alt="title" />
     <img id="circle" src="60.png" width="700" height="700" alt="60" />
     <h2 id="trans">
