--- a/SessionKStudio/week03/week03-class02/week03class02hw02.html
+++ b/SessionKStudio/week03/week03-class02/week03class02hw02.html
@@ -5,6 +5,10 @@
     <title>Obscure</title>
   </head>
   <body>
+    <a href="week03class02hw01.html">HOME</a>
+    <a href="week03class02hw03.html">MAIN</a>
+    <a href="week03class02hw01.html">OBSCURE</a>
+
     <p id="things">
       THINGS
     </p>
