--- a/SessionKStudio/week03/week03-class02/week03class02hw01.html
+++ b/SessionKStudio/week03/week03-class02/week03class02hw01.html
@@ -21,5 +21,10 @@
       fountainsof the new life which still remains closed to the thirsty lips of
       the people who follow in their griping and bestial tasks. - Malcolm Lowry
     </h2>
+
+    <p></p>
+    <div id="more">
+      <a href="obscure01.html">✰MORE✰</a>
+    </div>
   </body>
 </html>
