--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
         </em>
       </h3>
 
+      <h3>
+        <em>
+          <a href="SessionKStudio/week03/week03-class02/week03class02hw03.html">
+            Week03 Class02 Finale
+          </a>
+        </em>
+      </h3>
+
       <div id="circle01"></div>
 
       <div id="circle02"></div>
