--- a/SessionKStudio/week03/week03-class02/obscure01.html
+++ b/SessionKStudio/week03/week03-class02/obscure01.html
@@ -34,7 +34,7 @@
     <img id="pot" src="pot.png" alt="pot" />
 
     <div id="more">
-      <a href="week02class02hw01.html">✰MORE✰</a>
+      <a href="they.html">✰MORE✰</a>
     </div>
   </body>
 </html>
