--- a/SessionKStudio/week03/week03-class02/obscure01.html
+++ b/SessionKStudio/week03/week03-class02/obscure01.html
@@ -32,6 +32,7 @@
 
     <img id="sofa" src="sofa.png" alt="furniture" />
     <img id="pot" src="pot.png" alt="pot" />
+    <img id="window" src="window.png" alt="windows" />
 
     <div id="more">
       <a href="they.html">✰MORE✰</a>
