--- a/SessionKStudio/week03/week03-class02/week03class02hw03.html
+++ b/SessionKStudio/week03/week03-class02/week03class02hw03.html
@@ -9,11 +9,12 @@
     />
   </head>
   <body>
+    <nav>
     <a href="week03class02hw02.html">HOME</a>
     <br>
     <a href="week03class02hw02.html">LIGHT</a>
     <br>
-    <a href="week03class02hw01.html">OBSCURE</a>
+    <a href="week03class02hw01.html">OBSCURE</a> </nav>
    
     
 
