--- a/SessionKStudio/week03/week03-class02/homepage.html
+++ b/SessionKStudio/week03/week03-class02/homepage.html
@@ -3,11 +3,24 @@
   <head>
     <link rel="stylesheet" type="text/css" href="homepage.css" />
     <title>homepage</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Kanit:900i&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <div id="main">
+      <a href="week03class02hw03.html">MAIN</a>
+    </div>
+    <div id="obscure">
+      <a href="week03class02hw01.html">OBSCURE</a>
+    </div>
+    <div id="light">
+      <a href="week03class02hw02.html">LIGHT</a>
+    </div>
+    <div class="circle"></div>
+    <div class="circle1"></div>
+    <div class="circle2"></div>
     <img id="sofa" src="round.png" alt="furniture" />
-    <p>
-      MAIN
-    </p>
   </body>
 </html>
