--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
         </em>
       </h3>
 
+      <h3>
+        <em>
+          <a href="SessionKStudio/week03/week03-class02/homepage.html">
+            Week03 Class02 HOMEPAGE
+          </a>
+        </em>
+      </h3>
+
       <div id="circle01"></div>
 
       <div id="circle02"></div>
