--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@
         </em>
       </h3>
 
+      <h3>
+        <em>
+          <a href="SessionKStudio/week05/week05class02ex/scroll.html">
+            Week04 Class02 Exercise
+          </a>
+        </em>
+      </h3>
+
       <div id="circle01"></div>
 
       <div id="circle02"></div>
