--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
         </em>
       </h3>
 
+      <h3>
+        <em>
+          <a href="SessionKStudio/week06/week06class01/week06class02ex.html">
+            Week06 Class02 Exercise
+          </a>
+        </em>
+      </h3>
+
       <div id="circle01"></div>
 
       <div id="circle02"></div>
