--- a/SessionKLab/lab2:14exercise.html
+++ b/SessionKLab/lab2:14exercise.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="ex.css" />
+    <link rel="stylesheet" type="text/css" href="lab2:14exercise.css" />
     <title>Mondrian</title>
   </head>
   <body>
