--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@
         </em>
       </h3>
 
+      <h3>
+        <em>
+          <a href="SessionKStudio/week06/week06class01/ARCHIVE/html/home.html">
+            ARCHIVE;BOYFRONT
+          </a>
+        </em>
+      </h3>
+
       <div id="circle01"></div>
 
       <div id="circle02"></div>
