--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </a>
         </em>
       </h3>
-
+      <h3>WEEK04</h3>
       <h3>
         <em>
           <a href="SessionKStudio/week05/week05class02ex/scroll.html">
@@ -104,7 +104,7 @@
           </a>
         </em>
       </h3>
-
+      <h3>WEEK06</h3>
       <h3>
         <em>
           <a href="SessionKStudio/week06/week06class01/week06class02ex.html">
@@ -120,7 +120,7 @@
           </a>
         </em>
       </h3>
-
+      <h3>ARCHIVE</h3>
       <h3>
         <em>
           <a href="SessionKStudio/week06/week06class01/ARCHIVE/html/Home.html">
@@ -128,7 +128,14 @@
           </a>
         </em>
       </h3>
-
+      <h3>S,M,L,XL</h3>
+      <h3>
+        <em>
+          <a href="SessionKStudio/week09/china.html">
+            S,M,L/CHINA CHALET
+          </a>
+        </em>
+      </h3>
       <div id="circle01"></div>
 
       <div id="circle02"></div>
