--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -32,25 +32,25 @@
       <div id="slideshow-example" data-component="slideshow">
         <div role="list">
           <div class="slide">
-            <img src="pic01.JPG" alt="meal" width="500px" />
+            <img src="pic01.jpg" alt="meal" width="500px" />
           </div>
           <div class="slide">
-            <img src="pic02.JPG" alt="meal" width="500px" />
+            <img src="pic02.jpg" alt="meal" width="500px" />
           </div>
           <div class="slide">
-            <img src="pic03.JPG" alt="meal" width="500px" />
+            <img src="pic03.jpg" alt="meal" width="500px" />
           </div>
           <div class="slide">
-            <img src="pic04.JPG" alt="meal" width="500px" />
+            <img src="pic04.jpg" alt="meal" width="500px" />
           </div>
           <div class="slide">
-            <img src="pic05.JPG" alt="meal" width="500px" />
+            <img src="pic05.jpg" alt="meal" width="500px" />
           </div>
           <div class="slide">
-            <img src="pic06.JPG" alt="meal" width="500px" />
+            <img src="pic06.jpg" alt="meal" width="500px" />
           </div>
           <div class="slide">
-            <img src="pic07.JPG" alt="meal" width="500px" />
+            <img src="pic07.jpg" alt="meal" width="500px" />
           </div>
         </div>
       </div>
