--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>AARON</p>
     <br />
     <br />
+    <h3>STUDIO</h3>
     <h3>WEEK01</h3>
     <h3>
       <h3>
@@ -136,9 +137,16 @@
           </a>
         </em>
       </h3>
-      <div id="circle01"></div>
-
-      <div id="circle02"></div>
-    </h3>
+      <div id="lab">
+        <h3 class="lab">LAB</h3>
+        <h3>
+          <em>
+            <a href="SessionKLab/indexx.html">
+              HW 6 — use a button element with Javascript
+            </a> 
+          </em>
+        </h3>
+      </div>
+   
   </body>
 </html>
