--- a/SessionKLab/index2.html
+++ b/SessionKLab/index2.html
@@ -8,14 +8,24 @@
       html,
       body {
         padding: 0;
-        margin: 0;
+        margin: 100;
         box-sizing: border-box;
       }
-
+      h1 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 100px;
+        color: blue;
+      }
+      h2 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 40px;
+        color: red;
+      }
       /* we can style the select element, too. (not the "options" dropdown, through) */
       select {
-        font-family: monospace;
+        font-family: helvetica;
         font-size: 16px;
+        color: blue;
         text-transform: uppercase;
       }
 
@@ -29,15 +39,16 @@
   </head>
 
   <body>
-    <h1>Week 7 Dropdown Homework (due March 13)</h1>
+    <h2>Gooooooooogle</h2>
+    <h1>Sorry</h1>
 
     <select onchange="handleChange()">
-      <option disabled selected>title of your filter</option>
-      <option value="add your value">displayed value 1 [change me]</option>
-      <option value="add your value">displayed value 2 [change me]</option>
-      <option value="add your value">displayed value 3 [change me]</option>
-      <option value="add your value">displayed value 4 [change me]</option>
-      <option value="add your value">displayed value 5 [change me]</option>
+      <option disabled selected>For</option>
+      <option value="add your value">Posting</option>
+      <option value="add your value">This</option>
+      <option value="add your value">Assignment</option>
+      <option value="add your value">Late</option>
+      <option value="add your value">:(</option>
     </select>
 
     <div id="container">
