--- a/index.html
+++ b/index.html
@@ -146,6 +146,14 @@
             </a> 
           </em>
         </h3>
+        <h3>
+          <em>
+            <a href="SessionKLab/index2.html">
+              HW 7 — use a select HTML element with JavaScript
+            </a> 
+          </em>
+        </h3>
+     
       </div>
    
   </body>
