--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <h3>
           <em>
             <a href="SessionKLab/index2.html">
-              HW 7 — use a select HTML element with JavaScript
+              HW 7 — use a select HTML element with Javascript
             </a> 
           </em>
         </h3>
