--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -113,6 +113,8 @@
 
     <script></script>
 
-    <div id="projector"></div>
+    <div id="tv">
+      <div class="headline">CHINA CHALET</div>
+    </div>
   </body>
 </html>
