--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
         <h3>
           <em>
             <a href="SessionKLab/indexx.html">
-              HW 6 — use a button element with Javascript
+              HW 6 — use a button element with JS
             </a> 
           </em>
         </h3>
         <h3>
           <em>
             <a href="SessionKLab/index2.html">
-              HW 7 — use a select HTML element with Javascript
+              HW 7 — use a select HTML element with JS
             </a> 
           </em>
         </h3>
