--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -111,15 +111,9 @@
       <img class="cai" src="menu.png" />
     </div>
 
-    <script></script>
-
     <div id="tv">
-      <div class="line">CHINA CHALET</div>
-      <audio id="myAudio" controls autoplay>
-        <source src="fan.ogg" type="audio/ogg" />
-        <source src="fan.mp3" type="audio/mpeg" />
-      </audio>
-
+      <img class="disco" src="disco.gif" />
+      <h3 class="glow">CHINA CHALET</h3>
       <audio id="myAudio" autoplay>
         <source src="fan.mp3" />
       </audio>
