--- a/SessionKStudio/week09/china.html
+++ b/SessionKStudio/week09/china.html
@@ -8,26 +8,29 @@
   </head>
   <body>
     <div id="laptop">
-      <div class="headline">CHINA CHALET</div>
+      <img class="headline" src="chinA.png" />
+      <img class="dark" src="logo.png" />
 
-      <div class="title">NEO CHINESE RESTAURANT and SPACE</div>
+      <div id="container">
+        <div class="title">NEO CHINESE RESTAURANT and SPACE</div>
 
-      <div id="text">
-        Welcome to China Chalet! We have been serving our classic & comtemporary
-        Chinese cuisine to businesses and residents in Manhattan's Financial
-        District since 1975. Our diversified menus of Dim Sum, authentic
-        Cantonese and Szechuan cuisines and an American selection insures that
-        there is something for everyone. Make a reservation or place an order
-        from our new inter-active web site.
+        <div id="text">
+          Welcome to China Chalet! We have been serving our classic &
+          comtemporary Chinese cuisine to businesses and residents in
+          Manhattan's Financial District since 1975. Our diversified menus of
+          Dim Sum, authentic Cantonese and Szechuan cuisines and an American
+          selection insures that there is something for everyone. Make a
+          reservation or place an order from our new inter-active web site.
+        </div>
+
+        <div id="textt">
+          WORKING HOURS <br />
+          MONDAY~SUNDAY 11:00AM~9:00PM MEALTIME <br />
+          FRIDAY~SUNDAY 10:00PM~4:00AM "❤"
+        </div>
+
+        <img class="dragon" src="dragon.png" />
       </div>
-
-      <div id="textt">
-        WORKING HOURS <br />
-        MONDAY~SUNDAY 11:00AM~9:00PM MEALTIME <br />
-        FRIDAY~SUNDAY 10:00PM~4:00AM "❤"
-      </div>
-
-      <img class="dragon" src="dragon.png" />
 
       <div id="slideshow-example" data-component="slideshow">
         <div role="list">
@@ -105,7 +108,6 @@
         <div class="headline">CHINA CHALET</div>
         <img class="dragon" src="dragon.png" />
         <img class="label" src="label.png" alt="meal" width="300px" />
-        <div class="head">WE DELIVER</div>
       </div>
 
       <img class="cai" src="menu.png" />
@@ -114,27 +116,15 @@
     <div id="tv">
       <img class="disco" src="sparkle.gif" />
       <h1 contenteditable spellcheck="false">cHiNa ChAlEt/telahc anihc</h1>
-      <h3 class="glow">CHINA CHALET</h3>
+
       <audio id="myAudio" autoplay>
         <source src="fan.mp3" />
       </audio>
-
-      <select onchange="handleChange()">
-        <option disabled selected>For</option>
-        <option value="add your value">Posting</option>
-        <option value="add your value">This</option>
-        <option value="add your value">Assignment</option>
-        <option value="add your value">Late</option>
-        <option value="add your value">:(</option>
-      </select>
     </div>
     <script>
       function myFunction() {
         var x = document.getElementById("myAudio").autoplay;
         document.getElementById("demo").innerHTML = x;
-      }
-      function handleChange() {
-        console.log("filter changed, now make me do something!");
       }
     </script>
   </body>
